--- a/js/index.css
+++ b/js/index.css
@@ -934,11 +934,11 @@ body {
   margin: 10px auto;
   font-size: 0.875rem;
 }
+.move-port .caption {
+  display: none;
+}
 .move-port .ydservice {
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
-  border: 1px solid rgba(247, 244, 244, 0.4);
+  display: none;
 }
 .move-port .ydservice ul {
   width: 98%;
